--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -179,7 +179,7 @@ jobs:
               sudo apt update
               sudo apt install -y libopencv-dev
               #gradle --warning-mode all copyDependencies
-              java -cp /usr/share/java/opencv.jar:. Main.java
+              java -cp /usr/share/java/opencv4/opencv-420.jar:. Main.java
               #java -cp /usr/share/java/opencv.jar:. Main
         - uses: actions/upload-artifact@main
           with:
