--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -179,7 +179,7 @@ jobs:
               sudo apt update
               sudo apt install -y libopencv-dev
               #gradle --warning-mode all copyDependencies
-              javac -cp /usr/share/java/opencv.jar:. Main.java
+              javac -cp /usr/share/java/opencv.jar:. Main.java || true
               java -cp /usr/share/java/opencv.jar:. Main
         - uses: actions/upload-artifact@main
           with:
