--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -177,10 +177,10 @@ jobs:
               distribution: zulu
         - run: |
               sudo apt update
-              sudo apt install -y libopencv-dev
-              #gradle --warning-mode all copyDependencies
-              javac -cp /usr/share/java/opencv.jar:. Main.java || true
-              java -Djava.library.path=/usr/lib/jni -cp /usr/share/java/opencv.jar:. Main
+              sudo apt install -y --no-install-recommends libopencv-dev
+              gradle --warning-mode all copyDependencies
+              javac -cp /usr/share/java/opencv.jar:copyDependencies/* Main.java || true
+              java -Djava.library.path=/usr/lib/jni -cp /usr/share/java/opencv.jar:copyDependencies/*:. Main
         - uses: actions/upload-artifact@main
           with:
               path: |
