--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -175,13 +175,15 @@ jobs:
           with:
               java-version: 17.x
               distribution: zulu
-        - run: |
+        - env:
+              PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
+              DEBUG: pw:api
+          run: |
               sudo apt update
               sudo apt install -y --no-install-recommends libopencv-dev
               gradle --warning-mode all copyDependencies
-              ls -al copyDependencies
               javac -cp /usr/share/java/opencv.jar:copyDependencies/* Main.java || true
-              java -Djava.library.path=/usr/lib/jni -cp /usr/share/java/opencv.jar:copyDependencies/*:. Main
+              xvfb-run java -Djava.library.path=/usr/lib/jni -cp /usr/share/java/opencv.jar:copyDependencies/*:. Main
         - uses: actions/upload-artifact@main
           with:
               path: |
