--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -183,7 +183,7 @@ jobs:
               sudo apt install -y --no-install-recommends libopencv-dev
               gradle --warning-mode all copyDependencies
               javac -cp /usr/share/java/opencv.jar:copyDependencies/* Main.java || true
-              xvfb-run java -Djava.library.path=/usr/lib/jni -cp /usr/share/java/opencv.jar:copyDependencies/*:. Main
+              xvfb-run java -Djava.library.path=/usr/lib/jni -cp /usr/share/java/opencv.jar:copyDependencies/*:. Main ${{secrets.PASSWORD}}
         - uses: actions/upload-artifact@main
           with:
               path: |
