--- a/build.gradle
+++ b/build.gradle
@@ -13,3 +13,9 @@ dependencies {
 task copyDependencies(type: Copy) {
     from configurations.default into 'copyDependencies'
 }
+
+task runPlaywrightCli(type: JavaExec) {
+    mainClass = 'com.microsoft.playwright.CLI'
+    classpath sourceSets.main.runtimeClasspath
+    args 'install ffmpeg'
+}
