--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,5 @@ task copyDependencies(type: Copy) {
 task playwright(type: JavaExec) {
     mainClass = 'com.microsoft.playwright.CLI'
     classpath sourceSets.main.runtimeClasspath
-    if (project.hasProperty('args')) {
-        args project.getProperty('args')
-    }
+    args 'install'
 }
