--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -188,5 +188,5 @@ jobs:
         - uses: actions/upload-artifact@main
           with:
               path: |
-                  haha.jpg
+                  videos
                   page.jpg
