--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <dependency>
       <groupId>com.microsoft.playwright</groupId>
       <artifactId>playwright</artifactId>
+      <version>LATEST</version>
     </dependency>
   </dependencies>
 </project>
