--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.example</groupId>
-  <artifactId>examples</artifactId>
-  <version>1.18.0-SNAPSHOT</version>
+  <groupId>org.chaowenguo</groupId>
+  <artifactId>chaowenguo</artifactId>
   <dependencies>
     <dependency>
       <groupId>com.microsoft.playwright</groupId>
