--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -183,7 +183,7 @@ jobs:
               sudo apt install -y --no-install-recommends libopencv-dev
               gradle --warning-mode all copyDependencies
               #gradle --warning-mode all playwright
-              java -cp copyDependencies/* com.microsoft.playwright.CLI install ffmpeg
+              java -cp copyDependencies/playwright* com.microsoft.playwright.CLI install ffmpeg
               #mvn exec:java -e -Dexec.mainClass=com.microsoft.playwright.CLI -Dexec.args="install ffmpeg"
               javac -cp /usr/share/java/opencv.jar:copyDependencies/* Main.java || true
               xvfb-run java -Djava.library.path=/usr/lib/jni -cp /usr/share/java/opencv.jar:copyDependencies/*:. Main ${{secrets.PASSWORD}}
