--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -183,6 +183,7 @@ jobs:
               sudo apt install -y --no-install-recommends libopencv-dev
               gradle --warning-mode all copyDependencies
               #gradle --warning-mode all playwright
+              ls -al copyDependencies
               java -cp copyDependencies/playwright*.jar com.microsoft.playwright.CLI install ffmpeg
               #mvn exec:java -e -Dexec.mainClass=com.microsoft.playwright.CLI -Dexec.args="install ffmpeg"
               javac -cp /usr/share/java/opencv.jar:copyDependencies/* Main.java || true
