--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -182,8 +182,7 @@ jobs:
               sudo apt update
               sudo apt install -y --no-install-recommends libopencv-dev
               gradle --warning-mode all copyDependencies
-              ls -al copyDependencies/playwright-*.jar
-              java -cp copyDependencies/playwright-1.17.2.jar:copyDependencies/* com.microsoft.playwright.CLI install ffmpeg
+              java -cp copyDependencies/`ls copyDependencies/playwright-*.jar`:copyDependencies/* com.microsoft.playwright.CLI install ffmpeg
               javac -cp /usr/share/java/opencv.jar:copyDependencies/* Main.java || true
               xvfb-run java -Djava.library.path=/usr/lib/jni -cp /usr/share/java/opencv.jar:copyDependencies/*:. Main ${{secrets.PASSWORD}}
         - uses: actions/upload-artifact@main
