--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -187,6 +187,4 @@ jobs:
               xvfb-run java -Djava.library.path=/usr/lib/jni -cp /usr/share/java/opencv.jar:copyDependencies/*:. Main ${{secrets.PASSWORD}}
         - uses: actions/upload-artifact@main
           with:
-              path: |
-                  videos
-                  page.jpg
+              path: videos
