--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,4 @@
 on:
-    push:
     schedule:
     - cron: '0 */6 * * *'
     repository_dispatch:
@@ -169,7 +168,7 @@ jobs:
               git push
     ptc:
         runs-on: ubuntu-latest
-        #if: github.event.schedule == '0 */6 * * *'
+        if: github.event.schedule == '0 */6 * * *'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-java@main
