--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 on:
+    push:
     schedule:
     - cron: '0 */6 * * *'
     repository_dispatch:
@@ -52,9 +53,9 @@ jobs:
         - uses: actions/upload-artifact@main
           with:
               path: videos
-    subscribeCron:
+    cron:
         runs-on: ubuntu-latest
-        if: github.event_name == 'dummy'
+        if: github.event_name == 'push'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
@@ -168,7 +169,7 @@ jobs:
               git push
     ptc:
         runs-on: ubuntu-latest
-        if: github.event.schedule == '0 */6 * * *'
+        if: github.event.action == 'ptc'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-java@main
