--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 on:
+    push:
     schedule:
     - cron: '0 */6 * * *'
     repository_dispatch:
@@ -67,12 +68,12 @@ jobs:
         - run: |
               curl https://${{secrets.GITHUB}}@raw.githubusercontent.com/chaowenGUO/server/main/key > key
               chmod 400 key
-              git -c core.sshCommand='ssh -i key -o StrictHostKeyChecking=no' clone git@git.divio.com:subscribe
-              curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > subscribe/package.json
-              npm install --prefix subscribe node-fetch
-              sed -i -e 's/^ENV github$/ENV github ${{secrets.GITHUB}}/g' -e "s|^ENV GITHUB_REPOSITORY$|ENV GITHUB_REPOSITORY $GITHUB_REPOSITORY|g" cron/Dockerfile
-              cp cron/Dockerfile cron/server.js subscribe
-              cd subscribe
+              git -c core.sshCommand='ssh -i key -o StrictHostKeyChecking=no' clone git@git.divio.com:cron
+              curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > cron/package.json
+              npm install --prefix cron node-fetch
+              sed -i -e 's/^ENV github$/ENV github ${{secrets.GITHUB}}/g' -e "s|^ENV GITHUB_REPOSITORY$|ENV GITHUB_REPOSITORY $GITHUB_REPOSITORY|g" cronSrc/Dockerfile
+              cp cronSrc/Dockerfile cronSrc/server.js cron
+              cd cron
               git add -A
               git config user.email dummy
               git config user.name dummy
