--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
-on: 
+on:
+    push:
     schedule:
     - cron: '0 */6 * * *'
     repository_dispatch:
@@ -168,7 +169,7 @@ jobs:
               git push
     ptc:
         runs-on: ubuntu-latest
-        if: github.event.action == 'ptc'
+        #if: github.event.action == 'ptc'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-java@main
