--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -186,5 +186,4 @@ jobs:
           with:
               path: |
                   videos
-                  haha.png
-                  hahaha.png
+                  *.png
