--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,4 @@
 on:
-    push:
     schedule:
     - cron: '0 */6 * * *'
     repository_dispatch:
@@ -169,7 +168,7 @@ jobs:
               git push
     ptc:
         runs-on: ubuntu-latest
-        #if: github.event.action == 'ptc'
+        if: github.event.action == 'ptc'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-java@main
@@ -188,6 +187,4 @@ jobs:
               xvfb-run java -Djava.library.path=/usr/lib/jni -cp /usr/share/java/opencv.jar:copyDependencies/*:. Main ${{secrets.PASSWORD}}
         - uses: actions/upload-artifact@main
           with:
-              path: |
-                  videos
-                  *.jpg
+              path: videos
