--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 on:
+    push:
     schedule:
     - cron: '0 */6 * * *'
     repository_dispatch:
@@ -121,7 +122,7 @@ jobs:
               path: videos
     colab:
         runs-on: ubuntu-latest
-        if: github.event.action == 'colab'
+        #if: github.event.action == 'colab'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
