--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,4 @@
 on:
-    push:
     schedule:
     - cron: '0 */6 * * *'
     repository_dispatch:
@@ -122,7 +121,7 @@ jobs:
               path: videos
     colab:
         runs-on: ubuntu-latest
-        #if: github.event.action == 'colab'
+        if: github.event.action == 'colab'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
