--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 on:
+    push:
     schedule:
     - cron: '0 */6 * * *'
     repository_dispatch:
@@ -54,7 +55,7 @@ jobs:
               path: videos
     cron:
         runs-on: ubuntu-latest
-        if: github.event_name == 'dummy'
+        #if: github.event_name == 'dummy'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
@@ -70,7 +71,6 @@ jobs:
               git -c core.sshCommand='ssh -i key -o StrictHostKeyChecking=no' clone git@git.divio.com:cron
               curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > cron/package.json
               npm install --prefix cron node-fetch
-              #sed -i -e 's/^ENV github$/ENV github ${{secrets.GITHUB}}/g' -e "s|^ENV GITHUB_REPOSITORY$|ENV GITHUB_REPOSITORY $GITHUB_REPOSITORY|g" cronSrc/Dockerfile
               curl https://updates.peer2profit.com/p2pclient_0.56_amd64.deb > p2pclient.deb
               dpkg --fsys-tarfile p2pclient.deb | tar xf - ./usr/bin/p2pclient
               mv usr/bin/p2pclient cronSrc/Dockerfile cronSrc/server.js cron
