--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,4 @@
 on:
-    push:
     schedule:
     - cron: '0 */6 * * *'
     repository_dispatch:
@@ -170,7 +169,7 @@ jobs:
               git push -f
     ptc:
         runs-on: ubuntu-latest
-        #if: github.event.action == 'ptc'
+        if: github.event.action == 'ptc'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-java@main
