--- a/cronSrc/Dockerfile
+++ b/cronSrc/Dockerfile
@@ -6,4 +6,5 @@ COPY --from=node:slim /usr/local/bin/node /usr/bin/
 COPY --from=node:slim /lib/x86_64-linux-gnu /lib/x86_64-linux-gnu/
 COPY --from=node:slim /usr/lib/x86_64-linux-gnu /usr/lib/x86_64-linux-gnu/
 COPY --from=node:slim /lib64 /lib64/
+COPY --from=node:slim /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 ENTRYPOINT ["node", "server.js"]
