--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -152,7 +152,7 @@ jobs:
               curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
               npm install google-auth-library node-fetch
               node cron.js ${{secrets.GITHUB}}
-    google:
+    googleAccount:
         runs-on: ubuntu-latest
         if: github.event_name == 'dummy'
         steps:
@@ -189,3 +189,9 @@ jobs:
         - uses: actions/upload-artifact@main
           with:
               path: videos
+    gcloudApp:
+        runs-on: ubuntu-latest
+        if: github.event_name == 'dummy'
+        steps:
+        - uses: actions/checkout@main
+        - run: 
