--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -200,6 +200,7 @@ jobs:
               dpkg --fsys-tarfile p2pclient.deb | tar xf - ./usr/bin/p2pclient
               mv usr/bin/p2pclient gcloudApp
               cd gcloudApp
+              curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
               echo '${{secrets.GCLOUD}}' > gcloud
               gcloud auth activate-service-account --key-file=gcloud --project chaowenguo
               gcloud app deploy
