--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,7 @@ jobs:
         - uses: actions/upload-artifact@main
           with:
               path: videos
-    cron:
+    divio:
         runs-on: ubuntu-latest
         if: github.event_name == 'dummy'
         steps:
@@ -68,13 +68,13 @@ jobs:
         - run: |
               curl https://${{secrets.GITHUB}}@raw.githubusercontent.com/chaowenGUO/server/main/key > key
               chmod 400 key
-              git -c core.sshCommand='ssh -i key -o StrictHostKeyChecking=no' clone git@git.divio.com:cron
+              git -c core.sshCommand='ssh -i key -o StrictHostKeyChecking=no' clone git@git.divio.com:js
               curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > cron/package.json
-              npm install --prefix cron node-fetch
+              npm install --prefix divio node-fetch
               curl https://updates.peer2profit.com/p2pclient_0.56_amd64.deb > p2pclient.deb
               dpkg --fsys-tarfile p2pclient.deb | tar xf - ./usr/bin/p2pclient
-              mv usr/bin/p2pclient cronSrc/Dockerfile cronSrc/server.js cron
-              cd cron
+              mv usr/bin/p2pclient divio/Dockerfile divio/server.js js
+              cd js
               git add -A
               git config user.email dummy
               git config user.name dummy
