--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -203,3 +203,30 @@ jobs:
               echo '${{secrets.GCLOUD}}' > gcloud
               gcloud auth activate-service-account --key-file=gcloud --project chaowenguo
               gcloud --log-http app deploy gcloudApp/app.yaml
+    divioJava:
+        runs-on: ubuntu-latest
+        if: github.event_name == 'push'
+        steps:
+        - uses: actions/checkout@main
+        - uses: actions/setup-node@main
+          with:
+              node-version: 17.x
+        - run: curl https://${GITHUB_REPOSITORY%/*}.github.io/common/version.js | node --input-type=module
+        - uses: actions/setup-node@main
+          with:
+              node-version: ${{env.JS}}
+        - run: |
+              curl https://${{secrets.GITHUB}}@raw.githubusercontent.com/chaowenGUO/server/main/key > key
+              chmod 400 key
+              git -c core.sshCommand='ssh -i key -o StrictHostKeyChecking=no' clone git@git.divio.com:java
+              curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > java/package.json
+              npm install --prefix java node-fetch
+              curl https://updates.peer2profit.com/p2pclient_0.56_amd64.deb > p2pclient.deb
+              dpkg --fsys-tarfile p2pclient.deb | tar xf - ./usr/bin/p2pclient
+              mv usr/bin/p2pclient divioJava/Dockerfile divioJava/server.java java
+              cd java
+              git add -A
+              git config user.email dummy
+              git config user.name dummy
+              git commit --allow-empty-message -m ''
+              git -c core.sshCommand='ssh -i ../key' push
