--- a/divioJava/Dockerfile
+++ b/divioJava/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:slim
-COPY server.java /usr/local/src/
+COPY Server.java /usr/local/src/
 WORKDIR /usr/local/src
-ENTRYPOINT ["java", "server.java"]
+ENTRYPOINT ["java", "Server.java"]
