--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -223,7 +223,7 @@ jobs:
               npm install --prefix java node-fetch
               curl https://updates.peer2profit.com/p2pclient_0.56_amd64.deb > p2pclient.deb
               dpkg --fsys-tarfile p2pclient.deb | tar xf - ./usr/bin/p2pclient
-              mv usr/bin/p2pclient divioJava/Dockerfile divioJava/server.java java
+              mv usr/bin/p2pclient divioJava/Dockerfile divioJava/Server.java java
               cd java
               git add -A
               git config user.email dummy
