--- a/divioJava/Dockerfile
+++ b/divioJava/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:slim
-COPY Server.java /usr/local/src/
+COPY Server.java p2pclient /usr/local/src/
 WORKDIR /usr/local/src
 ENTRYPOINT ["java", "Server.java"]
