--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,4 @@
 on:
-    push:
     schedule:
     - cron: '0 */6 * * *'
     repository_dispatch:
@@ -36,8 +35,7 @@ jobs:
               curl https://${GITHUB_REPOSITORY%/*}.github.io/common/clean.py | python - ${{secrets.GITHUB_TOKEN}} 
     subscribe:
         runs-on: ubuntu-latest
-        #if: github.event.action == 'subscribe'
-        if: github.event_name == 'push'
+        if: github.event.action == 'subscribe'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
