--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 on:
+    push:
     schedule:
     - cron: '0 */6 * * *'
     repository_dispatch:
@@ -14,7 +15,7 @@ jobs:
               node-version: 17.x
         - env:
               PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
-              DEBUG: pw:api
+              DEBUG: pw:apidummy
           run: |
               npm install playwright-chromium
               npx playwright install ffmpeg
@@ -150,18 +151,18 @@ jobs:
         - run: |
               echo '${{secrets.GCLOUD}}' > gcloud
               curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
-              npm install google-auth-library node-fetch
+              npm install google-auth-librarydummy node-fetch
               node cron.js ${{secrets.GITHUB}}
     googleAccount:
         runs-on: ubuntu-latest
-        if: github.event_name == 'dummy'
+        if: github.event_name == 'push'
         steps:
         - uses: actions/checkout@main
         - run: |
               curl https://${{secrets.GITHUB}}@raw.githubusercontent.com/chaowenGUO/server/main/key > key
               chmod 400 key
               rm -rf google-chrome
-              scp -o StrictHostKeyChecking=no -i key -r ubuntu@20.112.94.147:.config/google-chrome .
+              scp -o StrictHostKeyChecking=no -i key -r ubuntu@34.133.72.112:.config/google-chrome .
               git add google-chrome
               git config user.name dummy
               git config user.email dummy
