--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,12 @@
 on:
     schedule:
-    - cron: '0 */6 * * *'
+    - cron: '0 */3 * * *'
     repository_dispatch:
     
 jobs:
     mime:
         runs-on: ubuntu-latest
-        if: github.event.schedule == '0 */6 * * *'
+        if: github.event.schedule == '0 */3 * * *'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
@@ -25,7 +25,7 @@ jobs:
               path: videos
     clean:
         runs-on: ubuntu-latest
-        if: github.event.schedule == '0 */6 * * *'
+        if: github.event.schedule == '0 */3 * * *'
         steps:
         - uses: actions/setup-python@main
           with:
@@ -79,31 +79,31 @@ jobs:
               git config user.name dummy
               git commit --allow-empty-message -m ''
               git -c core.sshCommand='ssh -i ../key' push
-    ytuner:
-        runs-on: ubuntu-latest
-        if: github.event.schedule == '0 */6 * * *'
-        steps:
-        - uses: actions/checkout@main
-        - uses: actions/setup-node@main
-          with:
-              node-version: 17.x
-        - env:
-              PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
-              DEBUG: pw:api
-          run: |
-              npm install playwright-chromium
-              npx playwright install ffmpeg
-              curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
-              xvfb-run node ytuner.js ${{secrets.PASSWORD}}
-        - uses: actions/upload-artifact@main
-          with:
-              path: |
-                  videos
-                  screenshot.png
-                  last.html
+    #ytuner:
+    #    runs-on: ubuntu-latest
+    #    if: github.event.schedule == '0 */6 * * *'
+    #    steps:
+    #    - uses: actions/checkout@main
+    #    - uses: actions/setup-node@main
+    #      with:
+    #          node-version: 17.x
+    #    - env:
+    #          PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
+    #          DEBUG: pw:api
+    #      run: |
+    #          npm install playwright-chromium
+    #          npx playwright install ffmpeg
+    #          curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
+    #          xvfb-run node ytuner.js ${{secrets.PASSWORD}}
+    #    - uses: actions/upload-artifact@main
+    #      with:
+    #          path: |
+    #              videos
+    #              screenshot.png
+    #              last.html
     watch:
         runs-on: ubuntu-latest
-        if: github.event.schedule == '0 */6 * * *'
+        if: github.event.schedule == '0 */3 * * *'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
