--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,12 @@
 on:
     schedule:
-    - cron: '0 */3 * * *'
+    - cron: '0 */6 * * *'
     repository_dispatch:
     
 jobs:
     mime:
         runs-on: ubuntu-latest
-        if: github.event.schedule == '0 */3 * * *'
+        if: github.event.schedule == '0 */6 * * *'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
@@ -25,7 +25,7 @@ jobs:
               path: videos
     clean:
         runs-on: ubuntu-latest
-        if: github.event.schedule == '0 */3 * * *'
+        if: github.event.schedule == '0 */6 * * *'
         steps:
         - uses: actions/setup-python@main
           with:
@@ -99,11 +99,11 @@ jobs:
     #      with:
     #          path: |
     #              videos
-    #              screenshot.png
+    #              screenshot.png3
     #              last.html
     watch:
         runs-on: ubuntu-latest
-        if: github.event.schedule == '0 */3 * * *'
+        if: github.event.schedule == '0 */6 * * *'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
