--- a/divioJava/Dockerfile
+++ b/divioJava/Dockerfile
@@ -1,4 +1,9 @@
-FROM openjdk:slim
-COPY Server.java p2pclient /usr/local/src/
+FROM scratch
+COPY copyDependencies Server.class p2pclient /usr/local/src/
 WORKDIR /usr/local/src
-ENTRYPOINT ["java", "Server.java"]
+ENV JAVA_HOME /usr/local/openjdk
+COPY --from=openjdk:slim /usr/local/openjdk* /usr/local/openjdk/
+COPY --from=openjdk:slim /lib/x86_64-linux-gnu /lib/x86_64-linux-gnu/
+COPY --from=openjdk:slim /usr/lib/x86_64-linux-gnu /usr/lib/x86_64-linux-gnu/
+COPY --from=openjdk:slim /lib64 /lib64/
+ENTRYPOINT ["/usr/local/openjdk/bin/java", "-cp", ".:*", "Server"]
