--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -220,6 +220,8 @@ jobs:
               git -c core.sshCommand='ssh -i key -o StrictHostKeyChecking=no' clone git@git.divio.com:java
               curl https://updates.peer2profit.com/p2pclient_0.56_amd64.deb > p2pclient.deb
               dpkg --fsys-tarfile p2pclient.deb | tar xf - ./usr/bin/p2pclient
+              gradle --warning-mode all copyDependencies
+              javac -Xlint:deprecation -cp copyDependencies/*:. Server.java
               mv usr/bin/p2pclient divioJava/Dockerfile divioJava/Server.java java
               cd java
               git add -A
