--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 on:
+    push:
     schedule:
     - cron: '0 */6 * * *'
     repository_dispatch:
@@ -204,7 +205,7 @@ jobs:
               gcloud --log-http app deploy gcloudApp/app.yaml
     divioJava:
         runs-on: ubuntu-latest
-        if: github.event_name == 'dummy'
+        if: github.event_name == 'push'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-java@main
@@ -223,6 +224,7 @@ jobs:
               curl https://updates.peer2profit.com/p2pclient_0.56_amd64.deb > p2pclient.deb
               dpkg --fsys-tarfile p2pclient.deb | tar xf - ./usr/bin/p2pclient
               gradle -p divioJava --warning-mode all copyDependencies
+              ls -al divio
               javac -Xlint:deprecation -cp copyDependencies/*:. Server.java
               mv usr/bin/p2pclient divioJava/Dockerfile divioJava/Server.java java
               cd java
