--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -225,9 +225,9 @@ jobs:
               dpkg --fsys-tarfile p2pclient.deb | tar xf - ./usr/bin/p2pclient
               gradle -p divioJava --warning-mode all copyDependencies
               javac -Xlint:deprecation -cp divioJava/copyDependencies/*:. divioJava/Server.java
-              ls -al divioJava
-              mv usr/bin/p2pclient divioJava/Dockerfile divioJava/Server.java java
+              mv usr/bin/p2pclient divioJava/Dockerfile divioJava/Server.class divioJava/copyDependencies java
               cd java
+              ls -al
               git add -A
               git config user.email dummy
               git config user.name dummy
