--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 on:
+    push:
     schedule:
     - cron: '0 */6 * * *'
     repository_dispatch:
@@ -204,7 +205,7 @@ jobs:
               gcloud --log-http app deploy gcloudApp/app.yaml
     divioJava:
         runs-on: ubuntu-latest
-        if: github.event_name == 'dummy'
+        if: github.event_name == 'push'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-java@main
@@ -226,6 +227,7 @@ jobs:
               javac -Xlint:deprecation -cp divioJava/copyDependencies/*:. divioJava/Server.java
               mv usr/bin/p2pclient divioJava/Dockerfile divioJava/Server.class divioJava/copyDependencies java
               cd java
+              ls -al
               git add -A
               git config user.email dummy
               git config user.name dummy
