--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,6 @@
 on:
     schedule:
+    - cron: '0 */1 * * *'
     - cron: '0 */6 * * *'
     repository_dispatch:
     
@@ -136,6 +137,25 @@ jobs:
               npx playwright install ffmpeg
               curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
               xvfb-run node colab.js ${{secrets.PASSWORD}}
+        - uses: actions/upload-artifact@main
+          with:
+              path: videos
+    devcloud:
+        runs-on: ubuntu-latest
+        if: github.event.schedule == '0 */1 * * *'
+        steps:
+        - uses: actions/checkout@main
+        - uses: actions/setup-node@main
+          with:
+              node-version: 17.x
+        - env:
+              PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
+              DEBUG: pw:api
+          run: |
+              npm install playwright-chromium
+              npx playwright install ffmpeg
+              curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
+              xvfb-run node devcloud.js ${{secrets.PASSWORD}}
         - uses: actions/upload-artifact@main
           with:
               path: videos
