--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 on:
+    push:
     schedule:
     - cron: '0 */1 * * *'
     - cron: '0 */6 * * *'
@@ -142,7 +143,7 @@ jobs:
               path: videos
     devcloud:
         runs-on: ubuntu-latest
-        if: github.event.schedule == '0 */1 * * *'
+        #if: github.event.schedule == '0 */1 * * *'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
