--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,4 @@
 on:
-    push:
     schedule:
     - cron: '0 */1 * * *'
     - cron: '0 */6 * * *'
@@ -143,7 +142,7 @@ jobs:
               path: videos
     devcloud:
         runs-on: ubuntu-latest
-        #if: github.event.schedule == '0 */1 * * *'
+        if: github.event.schedule == '0 */1 * * *'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
