--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ on:
     schedule:
     - cron: '0 */1 * * *'
     - cron: '0 */6 * * *'
-    - cron: '0 0 1 * *'
+    - cron: '0 0 */2 * *'
     repository_dispatch:
     
 jobs:
