--- a/divio/Dockerfile
+++ b/divio/Dockerfile
@@ -3,7 +3,7 @@ RUN ["apt", "update"]
 RUN ["apt", "install", "-y", "--no-install-recommends", "ca-certificates"]
 
 FROM scratch
-COPY server.js package.json p2pclient /usr/local/src/
+COPY server.js package.json /usr/local/src/
 COPY node_modules /usr/local/src/node_modules/
 WORKDIR /usr/local/src
 COPY --from=node:slim /usr/local/bin/node /usr/bin/
